--- a/src/client/elims.ui
+++ b/src/client/elims.ui
@@ -104,28 +104,28 @@
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_2">
           <item>
-           <widget class="QRadioButton" name="a_radio">
+           <widget class="QRadioButton" name="a_choice">
             <property name="text">
              <string>Choice A goes here</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QRadioButton" name="b_radio">
+           <widget class="QRadioButton" name="b_choice">
             <property name="text">
              <string>Choice B goes here</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QRadioButton" name="c_radio">
+           <widget class="QRadioButton" name="c_choice">
             <property name="text">
              <string>Choice C goes here</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QRadioButton" name="d_radio">
+           <widget class="QRadioButton" name="d_choice">
             <property name="text">
              <string>Choice D goes here</string>
             </property>
