--- a/src/client/finals.ui
+++ b/src/client/finals.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>finals_dlg</class>
+ <widget class="QDialog" name="finals_dlg">
   <property name="geometry">
    <rect>
     <x>0</x>
