--- a/src/registration_app/user_edit.ui
+++ b/src/registration_app/user_edit.ui
@@ -65,16 +65,9 @@
    </item>
    <item>
     <layout class="QFormLayout" name="formLayout_2">
-     <item row="0" column="0">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Username:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QLineEdit" name="username_txt"/>
-     </item>
+     <property name="fieldGrowthPolicy">
+      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+     </property>
      <item row="1" column="0">
       <widget class="QLabel" name="label_4">
        <property name="text">
@@ -104,6 +97,13 @@
      </item>
      <item row="3" column="1">
       <widget class="QLineEdit" name="password_txt"/>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Information:</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
