--- a/src/registration_app/user_table.ui
+++ b/src/registration_app/user_table.ui
@@ -140,7 +140,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QListView" name="user_listview"/>
+      <widget class="QListWidget" name="user_listview"/>
      </item>
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
