--- a/src/client/semifinals.ui
+++ b/src/client/semifinals.ui
@@ -33,7 +33,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QLabel" name="question_lbl_3">
+      <widget class="QLabel" name="question_lbl">
        <property name="text">
         <string>Question text goes here.</string>
        </property>
@@ -121,14 +121,14 @@
    <item row="5" column="0" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout_9">
      <item>
-      <widget class="QPushButton" name="prev_btn_3">
+      <widget class="QPushButton" name="prev_btn">
        <property name="text">
         <string>Previous</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="next_btn_3">
+      <widget class="QPushButton" name="next_btn">
        <property name="text">
         <string>Next</string>
        </property>
