--- a/src/config_editor/server_editor.ui
+++ b/src/config_editor/server_editor.ui
@@ -21,7 +21,7 @@
     <item row="0" column="0" colspan="2">
      <widget class="QTabWidget" name="tabWidget_1">
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -86,7 +86,7 @@
            <item row="2" column="0">
             <widget class="QLabel" name="label_4">
              <property name="text">
-              <string>Contestant Config </string>
+              <string>Client Config </string>
              </property>
             </widget>
            </item>
@@ -96,7 +96,7 @@
            <item row="4" column="0">
             <widget class="QLabel" name="label_5">
              <property name="text">
-              <string>Presenter Config</string>
+              <string>Projector Config</string>
              </property>
             </widget>
            </item>
