--- a/src/client/elims.ui
+++ b/src/client/elims.ui
@@ -11,13 +11,13 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Elimination Round</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
-    <widget class="QLabel" name="round_lbl">
+    <widget class="QLabel" name="status_lbl">
      <property name="text">
-      <string>Elimination Round</string>
+      <string>Contest Status</string>
      </property>
     </widget>
    </item>
