fixed some minor racing condition bug

--- a/src/client/elims.ui
+++ b/src/client/elims.ui
@@ -57,6 +57,9 @@
        <property name="text">
         <string>Question text goes here.</string>
        </property>
+       <property name="wordWrap">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
     </layout>
