--- a/src/client/finalsIdent.ui
+++ b/src/client/finalsIdent.ui
@@ -30,7 +30,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>timer</string>
+      <string>0:0</string>
      </property>
     </widget>
    </item>
@@ -111,7 +111,7 @@
             <property name="sizeHint" stdset="0">
              <size>
               <width>20</width>
-              <height>40</height>
+              <height>28</height>
              </size>
             </property>
            </spacer>
@@ -131,7 +131,7 @@
             <property name="sizeHint" stdset="0">
              <size>
               <width>20</width>
-              <height>40</height>
+              <height>30</height>
              </size>
             </property>
            </spacer>
