--- a/src/deployer/deployer.ui
+++ b/src/deployer/deployer.ui
@@ -1,41 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>deployerUI</class>
- <widget class="QDialog" name="deployerUI">
+ <widget class="QMainWindow" name="deployerUI">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>186</width>
-    <height>110</height>
+    <width>174</width>
+    <height>177</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>MainWindow</string>
   </property>
-  <widget class="QComboBox" name="installList">
+  <widget class="QWidget" name="centralwidget">
+   <widget class="QGroupBox" name="groupBox">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>151</width>
+      <height>111</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Cerberus Installer</string>
+    </property>
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="0" colspan="2">
+      <widget class="QComboBox" name="installList">
+       <item>
+        <property name="text">
+         <string>Server</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Presenter</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Contestant</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Utils</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="1" column="1">
+      <widget class="QPushButton" name="install">
+       <property name="text">
+        <string>Install</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>30</y>
-     <width>141</width>
+     <x>0</x>
+     <y>0</y>
+     <width>174</width>
      <height>22</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="install">
-   <property name="geometry">
-    <rect>
-     <x>100</x>
-     <y>70</y>
-     <width>75</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Install</string>
-   </property>
-  </widget>
+  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
