Deployer run properly now, at least base from my understanding of its functionality. -also added <component>_deploy.txt file for every component which is where the program reads from to know what files to deploy.

--- a/src/deployer/deployer.ui
+++ b/src/deployer/deployer.ui
@@ -46,7 +46,12 @@
        </item>
        <item>
         <property name="text">
-         <string>Utils</string>
+         <string>Registration</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>QEditor</string>
         </property>
        </item>
       </widget>
