Finished the finals/tie-breaker functionality

--- a/src/client/elims.ui
+++ b/src/client/elims.ui
@@ -94,7 +94,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>timer</string>
+      <string/>
      </property>
     </widget>
    </item>
