--- a/src/client/semifinals.ui
+++ b/src/client/semifinals.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>700</width>
+    <height>550</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -34,6 +34,11 @@
      </item>
      <item>
       <widget class="QLabel" name="question_lbl">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Question text goes here.</string>
        </property>
@@ -63,6 +68,11 @@
       <layout class="QVBoxLayout" name="verticalLayout_5">
        <item>
         <widget class="QGroupBox" name="choicesgroup_3">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="title">
           <string>Choices</string>
          </property>
@@ -122,6 +132,11 @@
     <layout class="QHBoxLayout" name="horizontalLayout_9">
      <item>
       <widget class="QPushButton" name="prev_btn">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Previous</string>
        </property>
@@ -129,6 +144,11 @@
      </item>
      <item>
       <widget class="QPushButton" name="next_btn">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Next</string>
        </property>
@@ -143,6 +163,11 @@
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>14</pointsize>
+      </font>
      </property>
      <property name="text">
       <string/>
@@ -201,6 +226,11 @@
        </disabled>
       </palette>
      </property>
+     <property name="font">
+      <font>
+       <pointsize>16</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Contest Status</string>
      </property>
@@ -217,7 +247,7 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>379</width>
-       <height>28</height>
+       <height>80</height>
       </size>
      </property>
     </spacer>
