--- a/src/client/finalsIdent.ui
+++ b/src/client/finalsIdent.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>700</width>
+    <height>550</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -53,6 +53,11 @@
        </disabled>
       </palette>
      </property>
+     <property name="font">
+      <font>
+       <pointsize>16</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Contest Status</string>
      </property>
@@ -65,6 +70,11 @@
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>14</pointsize>
+      </font>
      </property>
      <property name="text">
       <string/>
@@ -91,6 +101,11 @@
      </item>
      <item>
       <widget class="QLabel" name="question_lbl">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Question text goes here.</string>
        </property>
@@ -109,7 +124,7 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>21</width>
-       <height>18</height>
+       <height>80</height>
       </size>
      </property>
     </spacer>
@@ -136,6 +151,11 @@
       <layout class="QVBoxLayout" name="verticalLayout_3">
        <item>
         <widget class="QGroupBox" name="answergroup">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="title">
           <string>Answer</string>
          </property>
@@ -211,6 +231,11 @@
    </item>
    <item row="5" column="0" colspan="3">
     <widget class="QPushButton" name="submit_btn">
+     <property name="font">
+      <font>
+       <pointsize>14</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Submit Answer</string>
      </property>
