--- a/src/server/view_answers.ui
+++ b/src/server/view_answers.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>322</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>260</y>
+     <y>280</y>
      <width>80</width>
      <height>26</height>
     </rect>
@@ -30,7 +30,7 @@
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>10</y>
+     <y>50</y>
      <width>121</width>
      <height>22</height>
     </rect>
@@ -60,11 +60,26 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>50</y>
+     <y>80</y>
      <width>301</width>
      <height>192</height>
     </rect>
    </property>
+  </widget>
+  <widget class="QComboBox" name="users_box">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>20</y>
+     <width>121</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string>user</string>
+    </property>
+   </item>
   </widget>
  </widget>
  <resources/>
